--- a/src/views/newProduct.ejs
+++ b/src/views/newProduct.ejs
@@ -9,21 +9,28 @@
     <title>Creacion y Edicion de productos</title>
 </head>
 <%- include ("./partials/headerMain")%>
-    <body>
-        <form action="/store" method="POST" enctype="multipart/form-data">
 
+    <body class="body1">
+        <main>
+        <form action="/store" method="POST" enctype="multipart/form-data" class="form-newProduct" id="form-newProduct">
             <div class="formulario">
                 <h3 class="title">Creación de Nuevos Productos</h3>
-                <div class="inputs-1">
-                    <label for="nombreProducto">Nombre </label>
-                    <input type="text" name="nombreProducto" id="nombreProducto" placeholder="Nombre del producto"
-                        required>
-                </div>
-                <div class="inputs-2">
-                    <label for="descripcion">Descripción </label>
-                    <input type="text" name="descripcion" id="descripcion" placeholder="Descripción" required>
-                </div>
-                <!-- <div class="inputs-3">
+                <section class="errores">
+                    <ul>
+
+                    </ul>
+                </section>
+                <div class="inputs">
+                    <div class="inputs-1">
+                        <label for="nombreProducto">Nombre </label>
+                        <input type="text" name="nombreProducto" id="nombreProduct" class="nombreProduct"
+                            placeholder="Nombre del producto">
+                    </div>
+                    <div class="inputs-2">
+                        <label for="descripcion">Descripción </label>
+                        <input type="text" name="descripcion" id="descripcion" placeholder="Descripción">
+                    </div>
+                    <!-- <div class="inputs-3">
                     <label for="category">Categoria:</label>
                     <select name="category" id="category" class="form-input">
                         <% for (let i=0; i < Category.length; i++) { %> 
@@ -35,22 +42,24 @@
                     </select> -->
 
                     <div class="inputs-3">
-                        <% for (let i= 0; i < Category.length; i++) { %> 
+                        <% for (let i=0; i < Category.length; i++) { %>
                             <div>
-                                <label for=<%= Category[i].talla %>>
-                                    <input type="radio" name="category" value= "<%=Category[i].id %>" class="category" id=<%= Category[i].categoria %>>
-                                    <%= Category[i].categoria %></label>
+                                <label for=<%=Category[i].categoria %>>
+                                    <input type="radio" name="category" value="<%=Category[i].id %>" class="category"
+                                        id=<%=Category[i].categoria %>>
+                                    <%= Category[i].categoria %>
+                                </label>
                             </div>
                             <% } %>
 
-                </div>
-                <div class="inputs-4">
-                    <h4 class="title">Elije la foto del producto</h4>
-                    <input type="file" name="imagen" class="productos" id="fotoProducto">
-                </div>
+                    </div>
+                    <div class="inputs-4">
+                        <h4 class="title">Elije la foto del producto</h4>
+                        <input type="file" name="imagen" class="productos" id="fotoProducto">
+                    </div>
 
-                <div class="inputs-5">
-                    <!-- <h4>Tallas</h4>
+                    <div class="inputs-5">
+                        <!-- <h4>Tallas</h4>
                     <select name="size" id="size" class="form-input">
                         <% for (let i=0; i < Size.length; i++) { %> 
                             <option value ="<%=Size[i].id%>"> 
@@ -59,32 +68,38 @@
                             </option>
                         <% } %>  -->
 
-                    <div class="tamaños">
-                        <% for (let i= 0; i < Size.length; i++) { %> 
-                            <div>
-                                <label for=<%= Size[i].talla %>>
-                                    <input type="radio" name="size" value= "<%=Size[i].id %>" class="tallas" id=<%= Size[i].talla %>>
-                                    <%=Size[i].id %>
-                                    <%= Size[i].talla %></label>
-                            </div>
-                            <% } %>
-                        
-                        <div class="inputs-6">
-                            <label for="precio">Precio</label>
-                            <input type="number" name="precio" id="precio" placeholder="precio $" required>
+                        <div class="tamaños">
+                            <% for (let i=0; i < Size.length; i++) { %>
+                                <div>
+                                    <label for=<%=Size[i].talla %>>
+                                        <input type="radio" name="size" value="<%=Size[i].id %>" class="tallas"
+                                            id=<%=Size[i].talla %>>
+                                        <%=Size[i].id %>
+                                            <%= Size[i].talla %>
+                                    </label>
+                                </div>
+                                <% } %>
+
+                                    <div class="inputs-6">
+                                        <label for="precio">Precio</label>
+                                        <input type="number" name="precio" id="precio" placeholder="precio $">
+                                    </div>
+
                         </div>
-
                     </div>
-                </div>
-                <br>
-                <br>
+                    <br>
+                    <br>
 
-                <button type="submit">Crear Producto</button>
-                <button type="reset">Borrar</button>
-                <br>
-                <br>
-            </div>
+                    <button type="submit">Crear Producto</button>
+                    <button type="reset">Borrar</button>
+                    <br>
+                    <br>
+                </div>
         </form>
-    </body>
+    </main>
     <%- include ("./partials/footer")%>
+    </body>
+
+    <script src="/js/validationNewProduct.js"></script>
+
 </html>
