--- a/public/css/login.css
+++ b/public/css/login.css
@@ -33,7 +33,7 @@
   justify-content: center; 
 }
 
-.register-container {
+.login-container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
