--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -44,10 +44,12 @@
                     </div>
                     <div class="informacion_tallas_compras">
                         <img src="images/imagenes ropa/workwhitus.png" class="trabajo">
-                        <p class="boton"><a href="howToBuy" target="_blank">Aplicar</a></p>
+                        <p class="boton"><a href="http://localhost:3000/" target="_blank">Aplicar</a></p>
                     </div>
                 </div>
         </main>
+
+        
 
         <div class="linea">
 
