--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,16 +1,55 @@
-.tituloregistro {
-    margin-top: 20px;
+.formCompleto{
     display: flex;
     justify-content: center;
+    margin-top: 10px;
+}
+
+.nombreregistro, .apellidosregistro, .emaillogin, .clavelogin{
+    font-size: 17px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.titleFoto{
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+.tituloregistro {
+    display: flex;
     margin-bottom: 30px;
     font-size: 30px;
 }
+
+.ipuntnombreregistro, .ipuntemail, .ipuntapellido, .inputclave{
+    background-color: #d4d4d434;
+    font-size: 25px;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    font-size: 1rem;
+    padding: 0.5rem;
+    width: 100%;
+    border-radius: 1px;
+}
+
+
+.inputt {
+    background-color: #d4d4d434;
+    font-size: 25px;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    margin: 1rem 0;
+  }
+  
+.inputt::placeholder {
+    color: rgb(139, 133, 133);
+  }
 
 .registrarse {
     margin-top: 20px;
     margin-bottom: 20px;
     background-image: url(../images/fondos/fondo1.jpg);
-    padding: 2rem;
+    padding: 20px 70px 20px 70px;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
     color: rgb(255, 255, 255);
     border-color: black;
@@ -42,47 +81,30 @@
 
 
 .tituloregistro {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
     font-size: 30px;
 }
 
 .nombreregistro {
-    display: flex;
-    justify-content: center;
     margin: 5px;
-
 }
 
 .apellidosregistro {
-    display: flex;
-    justify-content: center;
     margin: 5px;
 }
 
 .emaillogin {
-    display: flex;
-    justify-content: center;
     margin: 5px;
 }
 
 .emaillogin label {
-    display: flex;
-    justify-content: center;
     margin: 5px;
 }
 
 .clavelogin {
-    display: flex;
-    justify-content: center;
     margin: 5px;
-
 }
 
 .claveconfirm {
-    display: flex;
-    justify-content: center;
     margin: 5px;
 }
 
@@ -98,3 +120,46 @@
     border-radius: 7px;
 }
 
+.inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+  }
+  
+  .inputs input {
+    width: 100%;
+    padding: 0.5rem;
+    color: white;
+    border: none;
+    border-bottom: 1px solid rgb(100, 100, 100);
+  }
+  
+  .account-buttons {
+    display: flex	;
+    gap: 1rem;
+    margin-bottom: 2rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid white;
+  }
+  
+  .account {
+    font-size: 1rem;
+    padding: 0.5rem;
+    width: 100%;
+    border-radius: 1px;
+  }
+  
+  .account.res {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+  }
+  
+  .account.sub {
+    background-color: #686565d5;
+    color:rgb(255, 255, 255) (255, 255, 255);
+    border: 1px solid transparent;
+  }
+  
