--- a/src/views/SizeGuide.ejs
+++ b/src/views/SizeGuide.ejs
@@ -21,6 +21,8 @@
             pasando por debajo de los brazos. Cintura:
             Mide alrededor de tu cintura natural, dejando un dedo entre el metro
             y tu cuerpo. Cadera: Mide alrededor de la parte más completa, 20 abajo de tu cintura.</h5> -->
+            <section class="titulotarjetas">Medidas para Mujer</section>
+
         <div class="guia-completa">
             <div class="card">
                 <picture class="imgBox">
@@ -120,7 +122,7 @@
                 </div>
             </div>
         </div>
-
+        <section class="titulotarjetas">Medidas para Hombre</section>
         <section>
 
             <div class="guia-completa">
