--- a/src/views/howToBuy.ejs
+++ b/src/views/howToBuy.ejs
@@ -19,7 +19,7 @@
     <%- include ("./partials/headerMain")%>
     <%- include ("./partials/headerNavBar")%>
     
-    <img  class = "imagen" src ="/public/images/imagenes ropa/como_encargar_htmljpg.jpg"> 
+    <img  class = "imagen" src ="/images/imagenes ropa/como_encargar_htmljpg.jpg"> 
 
     <!-- footer -->
     <%- include ("./partials/footer")%>
