--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -17,13 +17,13 @@
                 <img class="imagenes" src="/images/avatars/<%=locals.user.avatar%>">
                 
                 <a href="/editProfile/<%= locals.user.id %> ">
-                    <button class="button-buy">editar</button>
+                    <button class="boton1">editar</button>
                     </a>
                 <form action="/deleteProfile/<%= locals.user.id %> " method="POST">
-                    <button type="submit" class="button-buy">borrar</button>
+                    <button type="submit" class="boton1">borrar</button>
                     </form>
                 <form action="/logout/">
-                        <button type="submit" class="button-buy">Cerrar Sesion</button>
+                        <button type="submit" class="boton1">Cerrar Sesion</button>
                         </form>
             </div> 
 
