--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -11,3 +11,32 @@
   display: flex;
   align-items: center;
 }
+
+.boton a{
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+
+.boton{
+  font-size: 80%;
+  text-align: center;
+  border-radius: 7px;
+  padding: 8px 8px 8px 8px;
+  margin-bottom: 20px;
+  background-color: rgb(255, 253, 253);
+  color:rgb(230, 198, 198);
+  border: 1px solid rgb(35, 36, 37);
+  transition-duration: 0.4s;
+  margin-bottom: 25px;
+  text-align: center;
+  position: absolute;
+  justify-content: center;
+}
+
+.boton:hover{
+  background-color: rgb(247, 213, 213);
+  color: white;
+}
