--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -56,8 +56,7 @@
         <div class="linea">
 
         </div>
-        <!-- 
-        <%- include ("./partials/footer")%> -->
+        <%- include ("./partials/footer")%>
 </body>
 
 </html>
