--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -10,7 +10,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.4/js/v4-shims.js" rel="stylesheet"></script> 
     <link href="https://use.fontawesome.com/releases/v5.0.4/js/fontawesome.js" rel="stylesheet"> </script>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/productDetail.css">
     <link rel="stylesheet" href="/css/footer.css">
     
 </head>
