--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -60,7 +60,7 @@
                                                 <label for=" clave">Contraseña</label>
                                             </div>
                                             <div class=" clavelogin">
-                                                <input class="inputclave" type=" password" name="clave">
+                                                <input type="password" class="inputclave" type=" password" name="clave">
                                             </div>
                                             <% if (locals.errors && errors.clave) { %>
                                                 <div class="texto-error">
@@ -73,7 +73,7 @@
                                                     </div>
 
                                                     <div class=" claveconfirm">
-                                                        <input class="inputclave" type=" clave" name="claveconfirm">
+                                                        <input type="password" class="inputclave" type=" clave" name="claveconfirm">
                                                     </div>
 
                                                     <% if (locals.errors && errors.claveconfirm) { %>
