--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -16,7 +16,7 @@
             <h4>Team</h4>
             <div class="dev-cont">
                 <p>Julieth </p>
-                <img src="/images/icon/juan.PNG" alt="">
+                <img src="/images/icon/julieth.jpg" alt="">
                 <p>Juan Esteban </p>
                 <img src="/images/icon/juan.PNG" alt="">
                 
