--- a/src/views/partials/headerMain.ejs
+++ b/src/views/partials/headerMain.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href="/images/logo/favicon.ico">
+    <link rel="shortcut icon" href="logo/favicon.ico">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/86a97245b7.js" crossorigin="anonymous"></script>
     <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
@@ -13,8 +13,8 @@
             <a href="/"><img class="logo" src="/images/Logo/logo.png"></a>
         </section>
         <form class="d-flex" method="GET" action="/search">
-            <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-secondary" type="submit">Search</button>
+            <input class="formularioDeBusqueda" type="search" name="search" placeholder="Search" aria-label="Search">
+            <button class="formularioDeBusqueda2" type="submit">Search</button>
         </form>
         <% if(locals.isLogged){ %>
             <div class="user-menu">
