--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -19,8 +19,6 @@
 
 </head>
 <%- include ("./partials/headerMain")%>
-    <%- include ("./partials/headerNavBar")%>
-
         <body>
             <div class="store-encabezado">
                 <h2> STORE</h2>
@@ -54,6 +52,5 @@
                     <% } %>
             </div>
         </body>
-        <!-- <%- include ("./partials/footer")%> -->
-
+        <%- include ("./partials/footer")%>
 </html>
