--- a/src/views/userList.ejs
+++ b/src/views/userList.ejs
@@ -9,48 +9,56 @@
     <link rel="stylesheet" href="/css/users.css">
 </head>
 <%- include ("./partials/headerMain")%>
-    <%- include ("./partials/headerNavBar")%>
 
-        <body>
-            <!-- LISTA DE PRODUCTOS  -->
-            <h1 class="titulo">Todos los Usuarios</h1>
+    <body>
+        <!-- LISTA DE PRODUCTOS  -->
+        <h1 class="titulo">Todos los Usuarios</h1>
 
 
-            <section>
-                <table>
+        <section class="tablaCompleta">
+            <br>
+            <br>
+            <% users.forEach(user=> { %>
+                <div>
+                    <table class="table">
 
-                <thead>
-                    <tr class="celda">
-                        <th>Id</th>
-                        <th>Nombres</th>
-                        <th>Apellidos</th>
-                        <th>Correo</th>
-                        <th>Usuario</th>
-                        <th>Avatar</th>
-                    </tr>
-                </thead>
-            </table>
-                <% users.forEach(user=> { %>
-                    <div>
-                        <table class="table">
-                            
                         <tr class="celda">
-                            <td><p><%= user.id%></p></td>
-                            <td><p><%= user.nombres%></p></td>
-                            <td><p><%= user.apellidos %></p></td>
-                            <td><p><%= user.email%></p></td>
-                            <td><p><%= user.administrador%></p></td>
-                            <td><img class="imagenes" src="/images/avatars/<%= user.avatar%>" alt=""></td>
+                            <td>
+                                <p>
+                                    <%= user.id%>
+                                </p>
+                            </td>
+                            <td>
+                                <p>
+                                    <%= user.nombres%>
+                                </p>
+                            </td>
+                            <td>
+                                <p>
+                                    <%= user.apellidos %>
+                                </p>
+                            </td>
+                            <td>
+                                <p>
+                                    <%= user.email%>
+                                </p>
+                            </td>
+                            <td>
+                                <p>
+                                    <%= user.administrador%>
+                                </p>
+                            </td>
+                            <!-- <td><img class="imagenes" src="/images/avatars/<%= user.avatar%>" alt=""></td> -->
                         </tr>
-                        </table>
-                    </div>
+                    </table>
+                </div>
 
-                    <% }) %>
+                <% }) %>
 
-            </section>
+        </section>
 
-        </body>
+    </body>
 
-        <%- include ("./partials/footer")%>
+    <%- include ("./partials/footer")%>
 
 </html>
